Panel: Fix profile pictures getting stretched

--- a/static/css/astyles.css
+++ b/static/css/astyles.css
@@ -165,6 +165,7 @@
 #user img {
 	margin: 0 auto;
 	border-radius: 1000px;
+	object-fit: cover;
 	height: 240px;
 	width: 240px;
 	box-shadow: 2px 2px 10px #0008;
